2002-12-11  Tor Lillqvist  <tml@iki.fi>

	* glib/gtimer.c (g_timer_elapsed): Fix off-by-one error. (#100853)

	* glib/gfileutils.c (g_file_test): Bypass extra test for root on
	Win32.

	* glib/glib.def: Add g_{get,set}_application_name.

Wed Dec 11 17:53:34 2002  Owen Taylor  <otaylor@redhat.com>

	* === Release 2.1.4 ===

	* NEWS: Updates.

Wed Dec 11 17:49:15 2002  Owen Taylor  <otaylor@redhat.com>

	* m4macros/glib-gettext.m4: Unset 
	ac_cv_func_bind_textdomain_codeset before calling
	AC_CHECK_FUNCS(bind_textdomain_codeset) again.

	* configure.in: Remove duplicate call to
	AC_CHECK_FUNCS(bind_textdomain_codeset)

2002-12-11  Pauli Virtanen <pauli.virtanen@hut.fi>

	* configure.in: Added "fi" to ALL_LINGUAS.

Wed Dec 11 17:00:20 2002  Owen Taylor  <otaylor@redhat.com>

	* acglib.m4 (ac_compile): Add GLIB_ASSERT_SET() as
	a helper for adding "must be set when cross-compiling"
	errors.

	* configure.in: For all cached variables without defaults,
	error out if they aren't set.

Wed Dec 11 15:52:01 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Also assume AC_LINK_IFELSE() is
	OK when cross-compiling for the libs checks, and for
	the sched_get_priority_min() check.

	* configure.in: Add cached value glib_cv_use_pid_surrogate.
	
Wed Dec 11 15:10:25 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Factor out repeated thread test into
	a m4_define(); when cross-compiling, assume that 
	AC_LINK_IFELSE() is good enough for thinking that
	-pthread[s] is OK. (More of #58786)

	* m4macros/glib-gettext.m4: Fix typo. (Manish Singh)

Wed Dec 11 14:28:50 2002  Owen Taylor  <otaylor@redhat.com>

	* configure.in: Version 2.1.4, interface age 1.

	* m4macros/glib-gettext.m4: Major rewrite; remove leftovers
	from building intl/, prefer libintl if both libc and libintl 
	have dgettext and libintl also has bind_textdomain_codeset().
	(#70627)

	* configure.in acinclude.m4: Use an include to avoid having 
	to duplicate the gettext macros between glib-gettext.m4